--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.example.htmlapp"
         minSdk 21
         targetSdk 34
-        versionCode 3
-        versionName "1.2"
+        versionCode 4
+        versionName "1.3"
     }
 
     buildTypes {
@@ -31,8 +31,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.10"
-
-    // ADD THESE TWO LINES TO FIX THE COMPONENTACTIVITY ERROR
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation libs.androidx.core.ktx
+    implementation libs.androidx.core
+    implementation libs.androidx.appcompat
 }
