--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,24 @@
+// settings.gradle (Groovy DSL)
 pluginManagement {
     repositories {
-        gradlePluginPortal()
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
     }
+    versionCatalogs {
+        libs {
+            // Remove the 'from' line here—Gradle automatically uses gradle/libs.versions.toml for the 'libs' catalog
+        }
+    }
 }
+
 rootProject.name = "htmlapp_kotlin_project"
-include(":app")
+include ':app'
