--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    namespace 'com.example.htmlapp'
+    namespace 'com.example.AvWx'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.htmlapp"
+        applicationId "com.example.AvWx"
         minSdk 21
         targetSdk 34
-        versionCode 9
-        versionName "1.3.6"
+        versionCode 10
+        versionName "1.3.6.1"
     }
 
     buildTypes {
