--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,11 @@ android {
     namespace 'com.example.AvWx'
     compileSdk 34
 
+    dependenciesInfo {
+        includeInApk = false
+        includeInBundle = false
+    }
+
     defaultConfig {
         applicationId "com.example.AvWx"
         minSdk 21
